2008-01-23  Marek Safar  <marek.safar@gmail.com>

 	* codegen.cs: Fixed AssemblyBuilder initialization on other platforms.

2008-01-22  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, expression.cs, generic.cs: Implicit bool? to bool conversion is
	not allowed.
	
	* generic.cs: Implemented coalesce expression.

2008-01-22  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #355145
 	* anonymous.cs, convert.cs, ecore.cs, generic.cs, lambda.cs: Implemented
 	expression tree type inference.

2008-01-22  Raja R Harinath  <harinath@hurrynot.org>

	Fix #354663
	* expression.cs (Binary.IsUnsignedType): Fix typo.
 	
2008-01-22  Marek Safar  <marek.safar@gmail.com>

 	* ecore.cs, expression.cs, generic.cs: Implemented NewArrayInit expression.
 	
2008-01-22  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #355161
 	* ecore.cs, expression.cs: Wider range of extension method supported
 	expressions.
 
2008-01-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* codegen.cs: Use magic value for AssemblyBuilderAccess to instruct
	AssemblyBuilder to operate in compiler context. Fixes mcs part of
	bug #354970.

2008-01-22  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #355148
 	* ecore.cs, expression.cs: Correctly report misused ref and out modifiers.
 	
2008-01-22  Miguel de Icaza  <miguel@novell.com>

	* expression.cs (CreateExpressionTree): Add support for or and
	logical or, and indent following the coding conventions.

	* typemanager.cs (LinqExpression): renamed from
	ExpressionTreeManager, for a shorter name.

	Use TypeManager.CoreLookupType to lookup types from our core
	assemblies and turn those into "Type" variables.

	Consumers that previously used "Namespace" and "Type" from this
	class should instead use the TypeExpression which is a type that
	is fully resolved (without involving the regular C# resolution
	rules). 

	This typically looks like this:

	TypeExpression texpr = new TypeExpression (LinqExpression.expression_type, loc);