@@ -17,23 +17,41 @@ namespace Mono.CSharp {
 	using System.Reflection.Emit;
 	using System.Text;
 
-	/// <summary>
-	///   This is just a helper class, it is generated by Unary, UnaryMutator
-	///   when an overloaded method has been found.  It just emits the code for a
-	///   static call.
-	/// </summary>
-	public class StaticCallExpr : ExpressionStatement {
-		ArrayList args;
-		MethodInfo mi;
+	//
+	// This is an user operator expression, automatically created during
+	// resolve phase
+	//
+	public class UserOperatorCall : Expression {
+		public delegate Expression ExpressionTreeExpression (EmitContext ec, MethodGroupExpr mg);
 
-		public StaticCallExpr (MethodInfo m, ArrayList a, Location l)
+		readonly ArrayList arguments;
+		readonly MethodGroupExpr mg;
+		readonly ExpressionTreeExpression expr_tree;
+
+		public UserOperatorCall (MethodGroupExpr mg, ArrayList args, ExpressionTreeExpression expr_tree, Location loc)
 		{
-			mi = m;
-			args = a;
+			this.mg = mg;
+			this.arguments = args;
+			this.expr_tree = expr_tree;
 
-			type = m.ReturnType;
+			type = ((MethodInfo)mg).ReturnType;
 			eclass = ExprClass.Value;
-			loc = l;
+			this.loc = loc;
+		}
+
+		public override Expression CreateExpressionTree (EmitContext ec)
+		{
+			if (expr_tree != null)
+				return expr_tree (ec, mg);
+
+			ArrayList args = new ArrayList (arguments.Count + 1);
+			args.Add (new Argument (new NullConstant (loc).CreateExpressionTree (ec)));
+			args.Add (new Argument (mg.CreateExpressionTree (ec)));
+			foreach (Argument a in arguments) {
+				args.Add (new Argument (a.Expr.CreateExpressionTree (ec)));
+			}
+
+			return CreateExpressionFactoryCall ("Call", args);
 		}
 
 		public override Expression DoResolve (EmitContext ec)
@@ -46,12 +64,11 @@ namespace Mono.CSharp {
 
 		public override void Emit (EmitContext ec)
 		{
-			Invocation.EmitArguments (ec, args, false, null);
-			ec.ig.Emit (OpCodes.Call, mi);
-			return;
+			mg.EmitCall (ec, arguments);
 		}
-		
-		static public StaticCallExpr MakeSimpleCall (EmitContext ec, MethodGroupExpr mg,
+
+		[Obsolete ("It may not be compatible with expression trees")]
+		static public UserOperatorCall MakeSimpleCall (EmitContext ec, MethodGroupExpr mg,
 							 Expression e, Location loc)
 		{
 			ArrayList args;
@@ -69,18 +86,12 @@ namespace Mono.CSharp {
 			if (mg == null)
 				return null;
 
-			return new StaticCallExpr ((MethodInfo) mg, args, loc);
+			return new UserOperatorCall (mg, args, null, loc);
 		}
 
-		public override void EmitStatement (EmitContext ec)
-		{
-			Emit (ec);
-			if (TypeManager.TypeToCoreType (type) != TypeManager.void_type)
-				ec.ig.Emit (OpCodes.Pop);
-		}
-		
+		[Obsolete ("It may not be compatible with expression trees")]
 		public MethodInfo Method {
-			get { return mi; }
+			get { return (MethodInfo)mg; }
 		}
 	}
 
@@ -370,17 +381,18 @@ namespace Mono.CSharp {
 			Type expr_type = Expr.Type;
 			string op_name = oper_names [(int) Oper];
 
-			Expression mg = MemberLookup (ec.ContainerType, expr_type, op_name, MemberTypes.Method, AllBindingFlags, loc);
-			if (mg != null) {
-				Expression e = StaticCallExpr.MakeSimpleCall (
-					ec, (MethodGroupExpr) mg, Expr, loc);
+			MethodGroupExpr user_op = MemberLookup (ec.ContainerType, expr_type, op_name, MemberTypes.Method, AllBindingFlags, loc) as MethodGroupExpr;
+			if (user_op != null) {
+				ArrayList args = new ArrayList (1);
+				args.Add (new Argument (Expr));
+				user_op = user_op.OverloadResolve (ec, ref args, false, loc);
 
-				if (e == null){
+				if (user_op == null) {
 					Error23 (expr_type);
 					return null;
 				}
-				
-				return e;
+
+				return new UserOperatorCall (user_op, args, CreateExpressionTree, loc);
 			}
 
 			switch (Oper){
@@ -568,6 +580,30 @@ namespace Mono.CSharp {
 			return null;
 		}
 
+		public override Expression CreateExpressionTree (EmitContext ec)
+		{
+			return CreateExpressionTree (ec, null);
+		}
+
+		Expression CreateExpressionTree (EmitContext ec, MethodGroupExpr user_op)
+		{
+			string method_name; 
+			switch (Oper) {
+				case Operator.UnaryNegation:
+					method_name = "Negate";
+					break;
+
+				default:
+					throw new InternalErrorException ("Unknown unary operator " + Oper.ToString ());
+			}
+
+			ArrayList args = new ArrayList (2);
+			args.Add (new Argument (Expr.CreateExpressionTree (ec)));
+			if (user_op != null)
+				args.Add (new Argument (user_op.CreateExpressionTree (ec)));
+			return CreateExpressionFactoryCall (method_name, args);
+		}
+
 		public override Expression DoResolve (EmitContext ec)
 		{
 			if (Oper == Operator.AddressOf) {
@@ -604,7 +640,7 @@ namespace Mono.CSharp {
 		public override void Emit (EmitContext ec)
 		{
 			ILGenerator ig = ec.ig;
-			
+
 			switch (Oper) {
 			case Operator.UnaryPlus:
 				throw new Exception ("This should be caught by Resolve");
@@ -800,7 +836,7 @@ namespace Mono.CSharp {
 		//
 		// This is expensive for the simplest case.
 		//
-		StaticCallExpr method;
+		UserOperatorCall method;
 
 		public UnaryMutator (Mode m, Expression e, Location l)
 		{
@@ -856,7 +892,7 @@ namespace Mono.CSharp {
 			mg = MemberLookup (ec.ContainerType, expr_type, op_name, MemberTypes.Method, AllBindingFlags, loc);
 
 			if (mg != null) {
-				method = StaticCallExpr.MakeSimpleCall (
+				method = UserOperatorCall.MakeSimpleCall (
 					ec, (MethodGroupExpr) mg, expr, loc);
 
 				type = method.Type;
@@ -1280,8 +1316,8 @@ namespace Mono.CSharp {
 			Type etype = expr.Type;
 
 			if (type.IsValueType && !TypeManager.IsNullableType (type)) {
-				Report.Error (77, loc, "The as operator must be used with a reference type (`" +
-					      TypeManager.CSharpName (type) + "' is a value type)");
+				Report.Error (77, loc, "The `as' operator cannot be used with a non-nullable value type `{0}'",
+					      TypeManager.CSharpName (type));
 				return null;
 			
 			}
@@ -3044,6 +3080,12 @@ namespace Mono.CSharp {
 			case Operator.BitwiseAnd:
 				method_name = "And";
 				break;
+			case Operator.GreaterThan:
+				method_name = "GreaterThan";
+				break;
+			case Operator.LessThan:
+				method_name = "LessThan";
+				break;
 			case Operator.LogicalAnd:
 				method_name = "AndAlso";
 				break;
@@ -3227,9 +3269,12 @@ namespace Mono.CSharp {
 	
 	//
 	// User-defined conditional logical operator
+	//
 	public class ConditionalLogicalOperator : Expression {
 		Expression left, right;
 		bool is_and;
+		Expression op_true, op_false, op;
+		LocalTemporary left_temp;
 
 		public ConditionalLogicalOperator (bool is_and, Expression left, Expression right, Type t, Location loc)
 		{
@@ -3251,9 +3296,6 @@ namespace Mono.CSharp {
 			Error (218, "The type ('" + TypeManager.CSharpName (type) + "') must contain " +
 			       "declarations of operator true and operator false");
 		}
-
-		Expression op_true, op_false, op;
-		LocalTemporary left_temp;
 
 		public override Expression DoResolve (EmitContext ec)
 		{
@@ -3283,7 +3325,7 @@ namespace Mono.CSharp {
 				return null;
 			}
 
-			op = new StaticCallExpr (method, arguments, loc);
+			op = new UserOperatorCall (operator_group, arguments, null, loc);
 
 			op_true = GetOperatorTrue (ec, left_temp, loc);
 			op_false = GetOperatorFalse (ec, left_temp, loc);
@@ -3442,6 +3484,15 @@ namespace Mono.CSharp {
 			get {
 				return false_expr;
 			}
+		}
+
+		public override Expression CreateExpressionTree (EmitContext ec)
+		{
+			ArrayList args = new ArrayList (3);
+			args.Add (new Argument (expr.CreateExpressionTree (ec)));
+			args.Add (new Argument (true_expr.CreateExpressionTree (ec)));
+			args.Add (new Argument (false_expr.CreateExpressionTree (ec)));
+			return CreateExpressionFactoryCall ("Condition", args);
 		}
 
 		public override Expression DoResolve (EmitContext ec)
@@ -5342,7 +5393,7 @@ namespace Mono.CSharp {
 
 			return true;
 		}
-		
+
 		public override Expression CreateExpressionTree (EmitContext ec)
 		{
 			if (dimensions != 1) {
